# upcloud-python-api

./: .circle.yml  .coveragerc  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .snyk  .travis.yml  CHANGELOG.md  LICENSE.txt  MANIFEST.in  README.md  circle.yml  mkdocs.yml  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.txt  sandbox.py  setup.cfg  setup.py  tox.ini  upcloud-python-api.sublime-project
.github/workflows/: codeql.yml  main.yml  publish-testpypi-manual.yml
docs/: CloudManager.md  Firewall.md  IP-address-mixin.md  IP-address.md  Server.md  Storage.md  host-mixin.md  index.md  network-mixin.md  object_storage-mixin.md  server-mixin.md  storage-mixin.md
docs/html/: index.html
test/: conftest.py  live_test.py  test_cloud_manager.py  test_credentials.py  test_firewall.py  test_host.py  test_ip_manager.py  test_network.py  test_object_storage.py  test_server.py  test_server_creation.py  test_server_group.py  test_storage.py  test_tags.py
test/helpers/: infra.py  infra_helpers.py
test/json_data/: account.json  firewall_rule.json  firewall_rules.json  host.json  host_7653311107.json  https:__fi-hel1.img.upcloud.com_uploader_session_07a6c9a3-300e-4d0e-b935-624f3dbdff3f.json  ip_address.json  ip_address_10.1.0.101.json  ip_address_post.json  network.json  network_03000000-0000-4000-8001-000000000000.json  network_036df3d0-8629-4549-984e-dc86fc3fa1b0.json  network_post.json  object-storage.json  object-storage_0608edc4-d4a3-4b01-abe4-e147bd7ffe45.json  object-storage_06b0e4fc-d74b-455e-a373-60cd6ca84022.json  object-storage_06b0e4fc-d74b-455e-a373-60cd6ca84022_stats_network.json  object-storage_post.json  plan.json  price.json  router.json  router_03b34bc2-5adf-4fc4-8c44-83f869058f5a.json  router_04da7f97-dc03-4df0-868f-239f304ba72f.json  router_post.json  server-group_0b5169fc-23aa-4ba7-aaab-f38868ce99cd.json  server-group_post.json  server.json  (+25 more)
tests/: test_cloud_manager.py  test_ip_manager.py  test_server_creation.py
upcloud/: __init__.py  base.py  firewall.py  ip_address.py  server.py  storage.py  tools.py
upcloud_api/: __init__.py  api.py  base.py  constants.py  credentials.py  errors.py  firewall.py  host.py  interface.py  ip_address.py  ip_network.py  label.py  load_balancer.py  network.py  object_storage.py  router.py  server.py  server_group.py  storage.py  storage_import.py  tag.py  tools.py  upcloud_resource.py  utils.py
(+34 files in other folders)
