[metadata]
name = upcloud_api
description = UpCloud API Client
long_description = file: README.md
long_description_content_type = text/markdown
opriginal_author = Elias Nygren
maintainer = UpCloud
maintainer_email = hello@upcloud.com
url = https://github.com/UpCloudLtd/upcloud-python-api
packages=['upcloud_api', 'upcloud_api.cloud_manager']
license = MIT

[options]
python_requires = >=3.6, <4
setup_requires =
    setuptools
install_requires =
    python-dateutil
    requests
packages =
    upcloud_api
    upcloud_api.cloud_manager

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 99
extend-ignore =
    # ignore line length problems; those are fixed by black
    E501
    # via black
    E203
    W503
    # docstring format leniency
    D100
    D104
    D105
    D200
    D202
    D205
    D400
    D401
    D403
    # things from `hacking` we don't care about
    H101
    H301
    H306
    H404
    H405
per-file-ignores =
    test/*: D101,D102,D103,F841,S101,S106,B011
    # ignore "imported but not used" in any __init__.pys
    */__init__.py: F401
exclude =
    .git
    ENV
    __pycache__
    build
