[metadata]
name = upcloud_api
description = UpCloud API Client
long_description = file: README.md
long_description_content_type = text/markdown
original_author = Elias Nygren
maintainer = UpCloud
maintainer_email = hello@upcloud.com
url = https://github.com/UpCloudLtd/upcloud-python-api
packages=['upcloud_api', 'upcloud_api.cloud_manager']
license = MIT
license_files = []

[options]
python_requires = >=3.9, <4
setup_requires =
    setuptools
install_requires =
    requests
packages =
    upcloud_api
    upcloud_api.cloud_manager

[options.extras_require]
keyring =
    keyring>=23.0
